Implemented successful get method of a random confession from mongodb

--- a/confessionlist/client/src/app/app.component.html
+++ b/confessionlist/client/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div style = "text-align:center">
-    <h1>
-       This is coming from app.component.html
-    </h1>
- </div>
+<h3>Current Confession</h3>
+<ul>
+   <li>
+      {{item.submission}}
+   </li>
+</ul>
 <app-confessions></app-confessions>
