--- a/confessionlist/client/src/app/confessions/confessions.component.html
+++ b/confessionlist/client/src/app/confessions/confessions.component.html
@@ -1,3 +1,3 @@
-<p> 
-    Confessions component html file is being accessed 
-</p>
+<h3>{{newcomp}} </h3> 
+<h3> Service Property : {{newcomponentproperty}} </h3> 
+<h3> Today's Date : {{todaydate}} </h3>
