--- a/confessionlist/client/src/app/confessions/confessions.component.html
+++ b/confessionlist/client/src/app/confessions/confessions.component.html
@@ -1,3 +1,5 @@
-<h3>{{newcomp}} </h3> 
-<h3> Service Property : {{newcomponentproperty}} </h3> 
-<h3> Today's Date : {{todaydate}} </h3>
+<h3>{{item.submission}}</h3>
+<div class = "col-md-3">
+    <input type = "button" (click) = "nextConfession()" value = "Next" class = "btn btn-danger">
+
+</div>
