Added about and submit components and added a routing functionality to the webpage

--- a/confessionlist/client/src/app/app.component.html
+++ b/confessionlist/client/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-confessions></app-confessions>
+<nav>
+  <ul>
+    <li><a routerLink="/" routerLinkActive="active">Home</a></li>
+    <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+    <li><a routerLink="/confessions" routerLinkActive="active">Confessions</a></li>
+    <li><a routerLink="/submit" routerLinkActive="active">Submit</a></li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
