Added routing modules

--- a/confessionlist/client/src/app/app.component.html
+++ b/confessionlist/client/src/app/app.component.html
@@ -1,9 +1,7 @@
-<nav>
-  <ul>
-    <li><a routerLink="/" routerLinkActive="active">Home</a></li>
-    <li><a routerLink="/about" routerLinkActive="active">About</a></li>
-    <li><a routerLink="/confessions" routerLinkActive="active">Confessions</a></li>
-    <li><a routerLink="/submit" routerLinkActive="active">Submit</a></li>
-  </ul>
-</nav>
+<div class="navbar">
+  <a routerLink="/" routerLinkActive="active">Home</a>
+  <a routerLink="/about" routerLinkActive="active">About</a>
+  <a routerLink="/confessions" routerLinkActive="active">Confessions</a>
+  <a routerLink="/submit" routerLinkActive="active">Submit</a>
+</div>
 <router-outlet></router-outlet>
