moved depndencies in package.json

--- a/confessionlist/client/src/app/submit/submit.component.html
+++ b/confessionlist/client/src/app/submit/submit.component.html
@@ -4,5 +4,5 @@
         <label for="confession-submission">Submission</label>
         <input class="form-control" name="confession-submission" [(ngModel)]="confession.submission" placeholder="Submission"/>
     </div>
-    <button class="btn btn-primary" *ngIf="!confession._id" (click)="addConfession(confession)">Create</button>
+    <button class="btn btn-primary" *ngIf="!confession._id" (click)="addConfession(confession)">Submit</button>
 </div>
