Fixed bug with submit button

--- a/src/app/submit/submit.component.html
+++ b/src/app/submit/submit.component.html
@@ -1,8 +1,10 @@
 <div class = "container">
     <h2 class = "page-header"> Write a Confession </h2>
     <form (submit) = "addConfession()">
-        <label>Submission</label>
-        <input type = "text" [(ngModel)] = "submission" name = "submission" class = "form-control">
-        <input type = "submit" class = "btn btn btn-success" value = "Submit"
+        <div class = "form-group">
+            <label>Submission</label>
+            <input type = "text" [(ngModel)] = "submission" name = "submission" class = "form-control">
+        </div>
+        <input type = "submit" class = "btn btn btn-success" value = "Submit">
     </form>
 </div>
