Edited some text on the about section of the site

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,1 @@
-<p>This site was made to give people the freedom and the experience of viewing and submitting anonymous confessions.</p>
+<p>This site was made to give people the freedom and the experience of viewing and submitting anonymous confessions. Do not share anything that would dox or breach anybody's privacy.</p>
