Undoing last change regarding routerlinks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="navbar">
-  <a routerLink="/">Home</a>
-  <a routerLink="/about">About</a>
-  <a routerLink="/confessions">Confessions</a>
-  <a routerLink="/submit">Submit</a>
+  <a routerLink="/" routerLinkActive="active">Home</a>
+  <a routerLink="/about" routerLinkActive="active">About</a>
+  <a routerLink="/confessions" routerLinkActive="active">Confessions</a>
+  <a routerLink="/submit" routerLinkActive="active">Submit</a>
 </div>
 <router-outlet></router-outlet>
