Added selectors in the app.component.html file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,8 @@
   <a routerLink="/confessions" routerLinkActive="active">Confessions</a>
   <a routerLink="/submit" routerLinkActive="active">Submit</a>
 </div>
+<app-home></app-home>
+<app-about></app-about>
+<app-submit></app-submit>
+<app-confessions></app-confessions>
 <router-outlet></router-outlet>
